--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,13 @@
   margin: 0;
 }
 
-.navbar {
-  height: 72px;
-  padding: 0 40px;
+body {
+  background-color: #000;
+}
+
+.collapsed {
+  height: 55px;
+  padding: 0 20px;
 }
 
 .menu a {
@@ -33,8 +37,11 @@
 .search-button {
   border: none;
   background: none;
+  color: #fff;
 }
 
-.search-button:hover {
-  background-color: gray;
+@media screen and (min-width: 992px) {
+  .navbar {
+    height: 72px;
+  }
 }
