--- a/src/pages/HomePage/components/Banner/Banner.style.css
+++ b/src/pages/HomePage/components/Banner/Banner.style.css
@@ -17,7 +17,8 @@
 .banner-desc {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
+  width: 86%;
   height: 100%;
   padding-left: 20px;
   color: #fff;
