--- a/src/pages/HomePage/components/Banner/Banner.style.css
+++ b/src/pages/HomePage/components/Banner/Banner.style.css
@@ -29,10 +29,18 @@
 }
 
 .banner-desc h1 {
- margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 @media screen and (min-width: 992px) {
+  .banner {
+    height: 76vh;
+  }
+
+  .banner::before {
+    height: 76vh;
+  }
+
   .banner-desc {
     width: 36%;
     padding-left: 2rem;
