add largeDesktop sizing

--- a/src/pages/HomePage/components/MovieCard/MovieCard.style.css
+++ b/src/pages/HomePage/components/MovieCard/MovieCard.style.css
@@ -68,11 +68,11 @@
   margin-top: 10px;
 }
 
-.overlay p.adult {
+.adult {
   background-color: red;
 }
 
-.overlay p.non-adult {
+.non-adult {
   background-color: green;
 }
 
