--- a/src/pages/MovieDetail/MovieDetail.style.css
+++ b/src/pages/MovieDetail/MovieDetail.style.css
@@ -12,6 +12,10 @@
   padding-top: 20px;
 }
 
+.date-box span:first-child {
+  margin-right: 10px;
+}
+
 .score-box {
   display: flex;
   margin-bottom: 10px;
@@ -50,6 +54,32 @@
   content: "";
 }
 
-/* @media screen and (min-width: 992px) {
+.review h2 {
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
 
-} */
+.review p {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: keep-all;
+}
+
+.review p.no-more {
+  -webkit-line-clamp: unset;
+}
+
+.movie-video h2 {
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  .video {
+    width: 640px;
+    height: 390px;
+  }
+}
